サイト作成完了

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -21,6 +21,7 @@
   </body>
   <footer>
     <h1>現在の日時:<%= l DateTime.now %>
+        スケジュール合計:<%= Schedule.count %>
     </h1>
   </footer>
 </html>
